# suap

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  ruff.toml  rust-toolchain.toml  suap.example.toml  ty.toml
.github/workflows/: ty_type_check.yml
examples/: suap.toml
scripts/: docker_build.py
suap/: __init__.py  __main__.py  docker.py  errors.py  logger.py  main.py  mime_type.py  package.py  platform_arch.py  platform_format.py  project_type.py  templating.py  version.py
suap/commands/: docker.py  version.py
suap/commands/packaging/: binary.py  checks.py  icons.py  nsis.py  package.py
suap/config/: config.py  data.py
suap/formats/: __init__.py  nsis_installer.py
suap/packaging/: nsis.py  package.py
suap/projects/: __init__.py  data.py
suap/projects/cargo/: __init__.py  building.py  metadata_data.py  project.py
suap/templates/: nsis_app_capabilities_macro.nsi  nsis_app_capabilities_uni_macro.nsi  nsis_installer_script.nsi  test_template.txt
tests/: test_templating.py
