[project]
name = "suap"
version = "0.1.0"
description = "A tool to help us with cross-platform deployment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.21.0",
]

[project.scripts]
suap = "suap.main:app"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "suap"
module-root = ""