[project]
name = "suap"
description = "A tool to help us with cross-platform deployment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.21.0",
]
dynamic = ["version"]

[project.scripts]
suap = "suap.main:app"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "suap.version.__version__" }