[project]
name = "suap"
description = "A tool to help us with cross-platform deployment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.23.1",
]
dynamic = ["version"]

[project.scripts]
suap = "suap.main:app"

[dependency-groups]
dev = [
    "ty>=0.0.17",
    "ruff>=0.15.1"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "suap.version.__version__" }